vlib/v/checker/tests/match_enum_ref.vv
enum SomeType {
	a
}
fn f(t &SomeType) ?int {
	return match
		t	// note the missing asterisk
			{
				.a {
					panic('This does not happen!')
					3
				}
			}
}
fn main() {
	t := SomeType.a
	f(&t)?
	assert false // should not happen, but does
}